better descriptions for the cells in first column of Tools/Options dialog

--- a/o.n.core/src/org/netbeans/core/projects/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/projects/Bundle.properties
@@ -22,9 +22,11 @@ CTL_UserFile={0}
 
 #setting properties displayed in options dialog as setting definition status
 LBL_IndicatorProperty_Name=<<
-LBL_IndicatorProperty_Description=Origin of Setting
+LBL_IndicatorProperty_Description=Show Levels
 LBL_IndicatorProperty_Name_Expanded=>>
-LBL_IndicatorProperty_Description_Expanded=Origin of Setting
+LBL_IndicatorProperty_Description_Expanded=Hide Levels
+LBL_indicator_session=
+LBL_indicator_project=Project Setting
 LBL_FSP_Project-Layer=Project
 LBL_FSP_Desc_Project-Layer=Project Settings Level
 LBL_FSP_Session-Layer=User
