Fix of bug #14662: tooltips for resize code generation properties.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -638,17 +638,20 @@ PROP_VARIABLES_LOCAL=Local Variables
 #Method Picker
 CTL_Component=Component:
 
-MSG_FormSizePolicy=form size policy
-MSG_FormSize=form size
-MSG_FormPosition=form position
-MSG_GeneratePosition=generate position
-MSG_GenerateSize=generate size
-MSG_GenerateCenter=generate center
-MSG_FormEncoding=form encoding
-MSG_FormEncodingDesc=encoding used for serialization
-MSG_MenuBar=menu bar
-MSG_MenuBarDesc=menu bar of the form
-MSG_DesignerSize=designer size
+MSG_FormSizePolicy=Form Size Policy
+HINT_FormSizePolicy=Sets the policy for the generation of resize code.
+MSG_FormSize=Form Size
+HINT_FormSize=Sets the initial size of the form.
+MSG_FormPosition=Form Position
+HINT_FormPosition=Sets the screen position where the form opens.
+MSG_GeneratePosition=Generate Position
+HINT_GeneratePosition=If True, generates code that positions the form as specified by the Form Position property.
+MSG_GenerateSize=Generate Size
+HINT_GenerateSize=If True, generates code that sets the size of the form as specified by the Form Size property.
+MSG_GenerateCenter=Generate Center
+HINT_GenerateCenter=If True, generates code that positions the form at the center of the screen.
+MSG_DesignerSize=Designer Size
+HINT_DesignerSize=The size of the active form designer area.
 
 #Form Custom Editor
 CTL_PropertyEditorDoesNot=Custom Editing of this Property is not Supported
