--- a/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
@@ -68,7 +68,7 @@ CTL_ServerInfo=IDE / Tomcat 3.2 Standalone JSP Compiler
 # {0} number for the servlet
 # {1} name of the JSP
 LBL_ServletDisplayName=Servlet ({0}) for {1}
-CTL_ServletExecParamsBorderTitle=Servlet execution parameters
+CTL_ServletExecParamsBorderTitle=Servlet Execution Parameters:
 # {0} name of the JSP
 LBL_ServletDisplayNameNoNumber=Servlet for {0}
 LBL_JspLineDisplayName=JSP {0}.{1}:{2} (Deferred)
@@ -107,12 +107,15 @@ HINT_URIHint=URI of an object
 #ServletExecParamsAction
 ACT_ServletConfig=Servlet configuration...
 # 0 class name of the servlet
-LBL_Servlet_Configure=Servlet configuration for {0}
+LBL_Servlet_Configure=Servlet Configuration for {0}
 
 #ServletExecParamsPanel
 CTL_ServletExecParamsPanel.jLabel1.text=Web Module:
+ACSD_CTL_ServletExecParamsPanel.jLabel1=
 CTL_ServletExecParamsPanel.jLabel2.text=Servlet URI:
+ACSD_CTL_ServletExecParamsPanel.jLabel2=
 CTL_NoWebApps=There are no web modules in the repository.
+ACSD_ServletExecParamsPanel=
 
 # {0} file with package
 # {1} file without package
