A11Y bugfixes of Recreate Table dialog.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -538,9 +538,21 @@ GrabTableFileTypeDescription = Database structure files
 RecreateTableFileOpenDialogTitle = Recreate Table
 RecreateTableRenameTable = Name the table
 RecreateTableNewName = Name:
+RecreateTableNewName_Mnemonic = N
 RecreateTableRenameNotes = Create table script:
 EditCommand=Edit table script
+EditCommand_Mnemonic=E
 ReloadCommand=Reload table script from file
+ReloadCommand_Mnemonic=R
+
+ACS_RecreateTableNewNameA11yDesc = Table name.
+ACS_RecreateTableNewNameTextFieldA11yName = Table Name
+ACS_RecreateTableNewNameTextFieldA11yDesc = Table name.
+ACS_RecreateTableRenameNotesA11yDesc = Create table script.
+ACS_RecreateTableTableScriptTextAreaA11yName = Table Script
+ACS_RecreateTableTableScriptTextAreaA11yDesc = SQL command to create this table.
+ACS_EditCommandA11yDesc=Click to edit SQL command to create this table.
+ACS_ReloadCommandA11yDesc=Click to reload table script from file.
 
 # Command Editor
 
