--- a/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
+++ b/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
@@ -67,8 +67,13 @@ LBL_Deferred=deferred
 LBL____=<--->
 
 HINT_JSP_BREAKPOINT_ANNOTAION_SHORT_DESCRIPTION=JSP breakpoint
+HINT_JSP_BREAKPOINT=JSP breakpoint
 
-HINT_JSP_BREAKPOINT=JSP breakpoint 1
+HINT_PINK_JSP_BREAKPOINT_ANNOTAION_SHORT_DESCRIPTION=Pink JSP breakpoint
+HINT_PINK_JSP_BREAKPOINT=Pink JSP breakpoint
+
+HINT_JSP_SERVLET_BREAKPOINT_ANNOTAION_SHORT_DESCRIPTION=JSP Servlet breakpoint
+HINT_JSP_SERVLET_BREAKPOINT=JSP Servlet breakpoint
 
 CTL_settings_IE=Web debug settings
 
