--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -12,7 +12,9 @@
 MON_All_1=All
 MON_All_transactions_2=All transactions
 MON_Cancel=Cancel
+MON_Cancel_Mnemonic=C
 MON_Client_3=Client
+MON_Client_3_Mnemonic=C
 MON_Cookies_4=Cookies
 MON_Could_not_5=Could not create GUI component for HTTP Monitor
 MON_Current_Transactions_7=Current Transactions
@@ -23,12 +25,14 @@ MON_Delete_saved_11=Delete saved transactions
 MON_Display_12=Display
 MON_HTTP_Transaction_13=HTTP &Monitor
 MON_OK=OK
+MON_OK_Mnemonic=O
 MON_Order_transactions_14=Sort records alphabetically
 MON_Order_transactions_15=Sort records by timestamp (ascending)
 MON_Order_transactions_16=Sort records by timestamp (descending)
 MON_Reload_all_17=Reload all records
 MON_Replay_18=Replay
 MON_Request_19=Request
+MON_Request_19_Mnemonic=R
 MON_Header_19=Headers
 MON_Save_20=Save
 MON_Save_action_21=Save action failed
@@ -44,22 +48,53 @@ MON_Title=HTTP Monitor
 #NOI18N
 MON_Transaction_View_F1_Help_ID=ctx_monitorintro
 
+ACS_MON_Request_19A11yDesc=Request
+ACS_MON_RequestTable_19A11yName=Request Table
+ACS_MON_RequestTable_19A11yDesc=Request table.
+ACS_MON_Session_24A11yDesc=Session
+ACS_MON_SessionTable_24A11yName=Session Table
+ACS_MON_SessionTable_24A11yDesc=Session table.
+ACS_MON_Client_3A11yDesc=Client
+ACS_MON_ClientTable_3A11yName=Client Table
+ACS_MON_ClientTable_3A11yDesc=Client table.
+ACS_SortButtonUnsortedA11yDesc=Unsorted.
+ACS_SortButtonSortAZA11yDesc=Sorted A-Z.
+ACS_SortButtonSortZAA11yDesc=Sorted Z-A.
+ACS_MON_OKA11yDesc=OK
+ACS_MON_CancelA11yDesc=Cancel
+
 # Request table
 
 MON_Request_URI=Request URI
 MON_Resource=Accessed resource
 MON_Method=Method
 MON_Querystring=Query string
+MON_Querystring_Mnemonic=Q
 MON_No_querystring=There was no query string
 
+ACS_MON_QuerystringA11yDesc=Query string
+ACS_MON_QuerystringTableA11yName=Query String Table
+ACS_MON_QuerystringTableA11yDesc=Query string table.
+
 MON_Query_parameters=Query parameters
+MON_Query_parameters_Mnemonic=Q
 MON_Parameters=Parameters
+MON_Parameters_Mnemonic=P
 MON_Posted_data=Posted data
+MON_Posted_data_Mnemonic=P
 MON_Upload_File=File to upload
 MON_No_posted_data=No data was posted with the request
 MON_Unparameterized=Data sent with this request was not parameterized
 #MON_Unparameterized_bad=This request seems to contain nonparameterized data. For the JSP or servlet to be\nable to process such data, the request should have the HTTP header "Content-type"\nset to match the actual data format (for instance "text/plain"). If the JSP or\nservlet should have received parameterized data, make sure the syntax of the input\nis correct.
 MON_Unparameterized_bad=This request seems to contain nonparameterized data. For the JSP\nor servlet to be able to process such data, the request should\nhave the HTTP header "Content-type" set to match the actual data\nformat (for instance "text/plain"). If the JSP or servlet should\nhave received parameterized data, make sure the syntax of the\ninput is correct.
+
+ACS_MON_Query_parametersA11yDesc=Query parameters
+ACS_MON_ParametersA11yDesc=Parameters
+ACS_MON_Posted_dataA11yDesc=Posted data
+ACS_MON_ParametersTableA11yName=Parameters
+ACS_MON_ParametersTableA11yDesc=Parameters table.
+ACS_MON_Posted_dataTableA11yName=Posted Data
+ACS_MON_Posted_dataTableA11yDesc=Posted data table.
 
 MON_Upload_File_Not_Supported=Uploading files for PUT requests not supported for replay.
 MON_Warning_param=Problem with data from the ServletInputstream
@@ -82,9 +117,18 @@ MON_Charsets=Character sets accepted
 
 # Cookies
 MON_Incoming_cookie=Incoming cookies
+MON_Incoming_cookie_Mnemonic=I
 MON_Outgoing_cookie=Outgoing cookies
+MON_Outgoing_cookie_Mnemonic=O
 MON_No_incoming=No incoming cookies
 MON_No_outgoing=No outgoing cookies
+
+ACS_MON_Incoming_cookieA11yDesc=Incoming cookies
+ACS_MON_Incoming_cookieTableA11yName=Incoming Cookies Table
+ACS_MON_Incoming_cookieTableA11yDesc=Incoming cookies table.
+ACS_MON_Outgoing_cookieA11yDesc=Outgoing cookies
+ACS_MON_Outgoing_cookieTableA11yName=Outgoing Cookies Table
+ACS_MON_Outgoing_cookieTableA11yDesc=Outgoing cookies table.
 
 MON_Path=Path
 MON_Domain=Domain
@@ -102,9 +146,22 @@ MON_Session_invalidated=The session was destroyed during this request
 MON_Session_created=The session was created during this transaction
 MON_Session_existed=The session existed before this transaction
 MON_Session_properties=Session properties
+MON_Session_properties_Mnemonic=E
 
 MON_Session_att_after=Session attributes after the transaction
+MON_Session_att_after_Mnemonic=A
 MON_Session_att_before=Session attributes before the transaction
+MON_Session_att_before_Mnemonic=B
+
+ACS_MON_Session_propertiesA11yDesc=Session properties.
+ACS_MON_Session_propertiesTableA11yName=Session Properties
+ACS_MON_Session_propertiesTableA11yDesc=Session properties.
+ACS_MON_Session_att_afterA11yDesc=Session attributes after the transaction.
+ACS_MON_Session_att_afterTableA11yName=Session Attributes After The Transaction
+ACS_MON_Session_att_afterTableA11yDesc=Session attributes after the transaction.
+ACS_MON_Session_att_beforeA11yDesc=Session attributes before the transaction.
+ACS_MON_Session_att_beforeTableA11yName=Session Attributes Before The Transaction
+ACS_MON_Session_att_beforeTableA11yDesc=Session attributes before the transaction.
 
 MON_Session_no_att_before=Session attributes before the transaction: none
 MON_Session_no_att_after=Session attributes after the transaction: none
@@ -122,17 +179,30 @@ MON_No_servlet=This request was not handled by a servlet
 MON_IPlanet=It is currently not possible to record servlet information on iPlanet servers
 
 MON_Servlet_context=Servlet context
+MON_Servlet_context_Mnemonic=E
 MON_Class_name=Class name
 MON_Package_name=Package name
 MON_Servlet_engine=Servlet engine properties
+MON_Servlet_engine_Mnemonic=R
 MON_Servlet_info=Servlet info
 MON_Servlet_name=Servlet name
 MON_Context_name=Context name
 MON_Servlet=Servlet
+MON_Servlet_Mnemonic=S
 MON_Relative_path=Relative path
 MON_Absolute_path=Absolute path to context
 MON_Translated_path=Translated path
 MON_getServletInfo()_not=getServletInfo() not overridden
+
+ACS_MON_ServletA11yDesc=Servlet
+ACS_MON_ServletTableA11yName=Servlet Table
+ACS_MON_ServletTableA11yDesc=Servlet table.
+ACS_MON_Servlet_contextA11yDesc=Servlet context
+ACS_MON_Servlet_contextTableA11yName=Servlet Context Table
+ACS_MON_Servlet_contextTableA11yDesc=Servlet context table.
+ACS_MON_Servlet_engineA11yDesc=Servlet engine properties.
+ACS_MON_Servlet_engineTableA11yName=Servlet Engine Properties Table
+ACS_MON_Servlet_engineTableA11yDesc=Servlet engine properties table.
 
 MON_Platform=Platform
 MON_Java_version=Java version
@@ -140,25 +210,45 @@ MON_Server_name=Hostname of servlet engine
 MON_Server_port=Port number of HTTP service 
 
 MON_Init_parameters=Init parameters
+MON_Init_parameters_Mnemonic=I
 MON_No_init=No init parameters
+
+ACS_MON_Init_parametersA11yDesc=Init parameters.
+ACS_MON_Init_parametersTableA11yName=Init Parameters Table
+ACS_MON_Init_parametersTableA11yDesc=Init parameters table.
 
 
 # Misc
 MON_Name=Name
+MON_Name_Mnemonic=N
 MON_Value=Value
+MON_Value_Mnemonic=V
 MON_Edit=Edit
 MON_Edit_dots=Edit...
 MON_Editing=Editing
 
+ACS_MON_NameA11yDesc=Name
+ACS_MON_NameTextFieldA11yName=Name
+ACS_MON_NameTextFieldA11yDesc=Name
+ACS_MON_ValueA11yDesc=Value
+ACS_MON_ValueTextAreaA11yName=Value
+ACS_MON_ValueTextAreaA11yDesc=Value
+
 # Headers
 MON_HTTP_Headers=HTTP headers
+MON_HTTP_Headers_Mnemonic=H
 MON_No_headers=No HTTP headers were recorded
+
+ACS_MON_HTTP_HeadersA11yDesc=HTTP headers
+ACS_MON_HTTP_HeadersTableA11yName=HTTP headers
+ACS_MON_HTTP_HeadersTableA11yDesc=HTTP headers.
 
 #
 # Edit & Replay dialog
 #
 
 MON_Exec_server=Execution server
+MON_Exec_server_Mnemonic=E
 #{0} hostname
 MON_Exec_server_no_host=Server {0} is unreachable.
 #{0} hostname
@@ -166,6 +256,10 @@ MON_Exec_server_wrong=Server {0} is unreachable. Verify that the hostname is cor
 #{0} hostname
 #{1} port number
 MON_Exec_server_start=The execution server {0}:{1} is unavailable. Start the server and try again.
+
+ACS_MON_Exec_serverA11yDesc=Execution server
+ACS_MON_Exec_serverTableA11yName=Execution Server
+ACS_MON_Exec_serverTableA11yDesc=Execution server table.
 
 MON_EditReplay=Edit and replay
 
@@ -176,14 +270,24 @@ MON_Headers_Panel_Tab=Headers
 
 MON_Edit_param=Edit parameter
 MON_Delete_param=Delete parameters
+MON_Delete_param_Mnemonic=D
 MON_New_param=Add parameter
+MON_New_param_Mnemonic=A
 MON_Bad_param=Enter a name
 MON_Bad_param_msg=The parameter must have a name
 
+ACS_MON_New_paramA11yDesc=Add parameter.
+ACS_MON_Delete_paramA11yDesc=Delete parameters.
+
 MON_Edit_header=Edit header
 MON_Delete_header=Delete headers
+MON_Delete_header_Mnemonic=D
 MON_New_header=Add header
+MON_New_header_Mnemonic=A
 MON_Bad_header=Enter a name and a value
+
+ACS_MON_New_headerA11yDesc=Add header.
+ACS_MON_Delete_headerA11yDesc=Delete headers.
 
 MON_Edit_server=Edit server property
 MON_Edit_request=Edit request property
@@ -198,7 +302,9 @@ MON_Confirm_Delete_Params=Confirm deletion of the following parameters:
 MON_Confirmation_Required=Confirmation required
 
 MON_Send=Send transaction
+MON_Send_Mnemonic=S
 
+ACS_MON_SendA11yDesc=Send transaction
 
 #
 # REPLAY
