--- a/o.apache.tools.ant.module/build.xml
+++ b/o.apache.tools.ant.module/build.xml
@@ -268,6 +268,8 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
     - ${ant.jar}
     - ${ant-optional.jar}
 11. Test everything
+12. Submit a patch for cvs://cvs.apache.org/jakarta-ant/xdocs/external.xml
+    mentioning that the bundled version in NB is now ${release-version}.
 
 After that you should be done!
 </echo>
