#18049 [merge from 3.3]: Bean templates use localized human-readable names

--- a/beans/src/org/netbeans/modules/beans/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/Bundle.properties
@@ -378,3 +378,10 @@ OpenIDE-Module-Display-Category=Java
 OpenIDE-Module-Short-Description=Support for creating JavaBeans(TM) components.
 OpenIDE-Module-Long-Description=The Bean Patterns module provides support for developing JavaBeans(TM) components \
                 in the IDE, such as generation of properties, event sets, and BeanInfo.
+
+# Human-readable names for Bean templates:
+Templates/Beans/Bean.java=Java Bean
+Templates/Beans/BeanInfo.java=BeanInfo
+Templates/Beans/BeanInfoNoIcon.java=BeanInfo w/o Icon
+Templates/Beans/Customizer.java=Customizer
+Templates/Beans/PropertyEditor.java=Property Editor
