Fixed bug #18330 - I18N - The message "Index" does not come from Bundle. The message was missing in the bundle file.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -117,6 +117,8 @@ DecimalDigits = Decimal digits
 DecimalDigitsDescription = Decimal digits
 Position = Position
 PositionDescription = Position
+Index = Index
+IndexDescription = Index
 Unique = Unique
 Unique_Mnemonic = U
 UniqueDescription = Unique
