Fix of bug #18050: localized names of templates.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -691,13 +691,14 @@ Templates/GUIForms/AWTForms/Panel.java=Panel
 Templates/GUIForms/Dialogs=Sample Forms
 Templates/GUIForms/Dialogs/Application.java=Application
 Templates/GUIForms/Dialogs/MDIApplication.java=MDI Application
-Templates/GUIForms/Dialogs/OKCancelDialog.java=OK / Cancel Dialog
+Templates/GUIForms/Dialogs/OkCancelDialog.java=OK / Cancel Dialog
 Templates/GUIForms=GUI Forms
 Templates/GUIForms/JApplet.java=JApplet
 Templates/GUIForms/JDialog.java=JDialog
 Templates/GUIForms/JFrame.java=JFrame
 Templates/GUIForms/JInternalFrame.java=JInternalFrame
 Templates/GUIForms/JPanel.java=JPanel
+Templates/GUIForms/BeanForm.java=Bean Form
 Palette/AWT=AWT
 Palette/Swing=Swing
 Palette/Swing2=Swing (Other)
