Capitalization of loader name

--- a/html/src/org/netbeans/modules/html/Bundle.properties
+++ b/html/src/org/netbeans/modules/html/Bundle.properties
@@ -18,7 +18,7 @@ OpenIDE-Module-Long-Description=The HTML module supports creation and editing of
 
 
 #HtmlLoader
-PROP_HtmlLoader_Name=HTML objects
+PROP_HtmlLoader_Name=HTML Objects
 
 # Filenames
 Templates/Other/html.html=HTML File
