#18166: more graceful message when running an AntExecutor on some strange object.

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
@@ -118,3 +118,10 @@ MSG_err_line_col_line_col={0} [{2}:{3}-{4}:{5}] {1}
 # {0} - project path
 # {1} - target name
 #EXC_no_target=The Ant script {0} had no target named {1}.
+# {0} - data object display name
+# {1} - data loader display name
+# {2} - executor name
+EXC_not_an_ant_script=\
+        You cannot use {2} on {0} because it is an object of type {1}. \
+        Ant executors may only be used on Ant build scripts. \
+        Please see the online help for further explanation.
